# translucent-sdl3

./: .gitignore  .gitmodules  CMakeLists.txt  main.c
.github/workflows/: cmake-linux-platform.yml  cmake-windows-platform.yml
resources/: CMakeLists.txt
